--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <p>Your Age is :</p>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
